[gd_scene load_steps=9 format=2]

[ext_resource path="res://GameEntities/EntityBehaviours/EntityDetector/EntityDetector.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameEntities/Submarine/Submarine.tscn" type="PackedScene" id=2]
[ext_resource path="res://TestScenes/DetectorVisualizationTest/DetectorVisualizationTest.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=3]
radius = 50.0

[sub_resource type="CircleShape2D" id=4]
radius = 180.0

[sub_resource type="CircleShape2D" id=5]
radius = 200.0

[sub_resource type="RectangleShape2D" id=2]

[node name="Parent" type="Node2D"]
script = ExtResource( 3 )

[node name="Node2D" type="Node2D" parent="."]

[node name="DetectorNode" parent="Node2D" instance=ExtResource( 1 )]
position = Vector2( 249.187, 200 )
DetectorArea = [ SubResource( 1 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ]
DetectionShapes = [ SubResource( 2 ), null, null, null, null, null, null, null, null, null, null, null, null, null, null ]

[node name="Submarine" parent="." instance=ExtResource( 2 )]
position = Vector2( 466.944, 200 )

[node name="RadarToggle" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 446.74
margin_top = 553.374
margin_right = 530.74
margin_bottom = 573.374
toggle_mode = true
text = "Show Radar"

[connection signal="toggled" from="RadarToggle" to="." method="_on_RadarToggle_toggled"]
